[Autofill] Update placeholder visibility when resetting suggested value.

Bug: 780761
Change-Id: Ia0c19238ed3fb74d2f21bb43211c0e44aa5179de