third_party/WebKit/Source/core/html/forms/TextControlElement.cpp
@@ -993,8 +993,10 @@ void TextControlElement::SetSuggestedValue(const String& value) {
   UpdatePlaceholderText();
 
   HTMLElement* placeholder = PlaceholderElement();
-  if (!placeholder)
+  if (!placeholder) {
+    SetPlaceholderVisibility(PlaceholderShouldBeVisible());
     return;
+  }
 
   // Change the pseudo-id to set the style for suggested values or reset the
   // placeholder style depending on if there is a suggested value.
